--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "version": "0.0.1",
   "type": "module",
   "workspaces": [
+    "./apps/@sparrow-web",
+    "./apps/@sparrow-desktop",
     "./packages/@sparrow-library",
     "./packages/@sparrow-common",
     "./packages/@sparrow-teams",
@@ -14,13 +16,10 @@
     "./packages/@sparrow-deprecate"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri",
-    "prepare": "husky install",
-    "semantic-release": "semantic-release"
+    "desktop-dev": "yarn workspace @sparrow/desktop tauri dev",
+    "desktop-build": "yarn workspace @sparrow/desktop tauri build",
+    "web-dev": "yarn workspace @sparrow/web dev",
+    "web-build": "yarn workspace @sparrow/web build"
   },
   "dependencies": {
     "@codemirror/lang-html": "^6.4.7",
@@ -106,54 +105,5 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
-  "repository": "https://github.com/sparrowapp-dev/sparrow-app.git",
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/exec",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json"
-          ],
-          "message": "chore(release): ${nextRelease.version} [skip ci]"
-        }
-      ],
-      [
-        "@semantic-release/github",
-        {
-          "assets": [
-            {
-              "path": "/Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg",
-              "label": "Sparrow_2.8.0.dmg"
-            },
-            {
-              "path": "msi_files/*.exe",
-              "label": "Sparrow_2.8.0.exe"
-            },
-            {
-              "path": "msi_files/*.msi",
-              "label": "Sparrow_2.8.0.msi"
-            },
-            {
-              "path": "msi_files/*.zip",
-              "label": "Sparrow_2.8.0_x64_en-US.msi.zip"
-            },
-            {
-              "path": "/Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz",
-              "label": "Sparrow.app.tar.gz"
-            }
-          ]
-        }
-      ]
-    ]
-  }
+  "repository": "https://github.com/sparrowapp-dev/sparrow-app.git"
 }
