--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "./packages/@sparrow-common",
     "./packages/@sparrow-teams",
     "./packages/@sparrow-workspaces",
-    "./packages/@sparrow-support",
-    "./packages/@sparrow-deprecate"
+    "./packages/@sparrow-support"
   ],
   "scripts": {
     "desktop-dev": "yarn workspace @sparrow/desktop tauri dev",
