made changes in feat-sparrow-refactoring.yaml[]

--- a/.github/workflows/feat-sparrow-refactoring.yaml
+++ b/.github/workflows/feat-sparrow-refactoring.yaml
@@ -28,6 +28,7 @@ env:
 jobs:
   release_win:
     runs-on: windows-latest
+    environment: development
 
     
     steps:
@@ -108,6 +109,7 @@ jobs:
 
   release_macos:
     runs-on: macos-latest
+    environment: development
     needs: release_win
     
     steps:
@@ -214,4 +216,3 @@ jobs:
         env:
           SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
 
-          
