--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -4,30 +4,83 @@ on:
   push:
     branches:
       - development
+      - sonarqube
 
   pull_request:
-      types: [opened, synchronize, reopened]
-  
-  workflow_dispatch:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  sonarqube:
+  build:
     runs-on: ubuntu-latest
+    permissions: # permission to comment a PR
+      contents: read
+      pull-requests: write
     steps:
-      - uses: actions/checkout@master # Step for scanning your project
-
-      - name: Wait for the quality gate result
-        run: sleep 5
-
-      - uses: phwt/sonarqube-quality-gate-action@v1
-        id: quality-gate-check
+      - uses: actions/checkout@v2
         with:
-          sonar-project-key: ${{ vars.PROJECT_KEY }}
-          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }} #PR_GITHUB_TOKEN
+          # Disabling shallow clone is recommended for improving the relevancy of reporting.
+          fetch-depth: 0
 
-      - name: Output result
-        run: |
-          echo "${{ steps.quality-gate-check.outputs.project-status }}"
-          echo "${{ steps.quality-gate-check.outputs.quality-gate-result }}"
+      # Triggering SonarQube analysis; the results are required for the Quality Gate check.
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      
+      # # #If you wish to fail your job when the Quality Gate is red, uncomment the following lines.
+      # # #Check the Quality Gate status.
+      # - name: SonarQube Quality Gate check
+      #   id: sonarqube-quality-gate-check
+      #   uses: sonarsource/sonarqube-quality-gate-action@master
+      # # #Enforce a timeout to fail the step after a specific time.
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #OPTIONAL
+
+      # #PR Decoration
+      - name: SonarQube Pull Request Comment
+        if: always()
+        uses: campos-pay/sonarqube-pr-comment@main
+        with:
+          sonar_token: ${{ secrets.SONAR_TOKEN }}
+          sonar_host_url: ${{ secrets.SONAR_HOST_URL }}
+          sonar_projectkey: ${{ github.event.repository.name }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repo_name: ${{ github.repository }}
+          pr_number: ${{ github.event.pull_request.number }}
+
+
+# ========================= ORIGINAL WORKFLOW ================================================
+# on:
+#   push:
+#     branches:
+#       - development
+
+#   pull_request:
+#       types: [opened, synchronize, reopened]
+  
+#   workflow_dispatch:
+
+# jobs:
+#   sonarqube:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@master # Step for scanning your project
+
+#       - name: Wait for the quality gate result
+#         run: sleep 5
+
+#       - uses: phwt/sonarqube-quality-gate-action@v1
+#         id: quality-gate-check
+#         with:
+#           sonar-project-key: ${{ vars.PROJECT_KEY }}
+#           sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
+#           sonar-token: ${{ secrets.SONAR_TOKEN }}
+#           github-token: ${{ secrets.GITHUB_TOKEN }} #PR_GITHUB_TOKEN
+
+#       - name: Output result
+#         run: |
+#           echo "${{ steps.quality-gate-check.outputs.project-status }}"
+#           echo "${{ steps.quality-gate-check.outputs.quality-gate-result }}"
