--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -1,6 +1,10 @@
 name: Sonarqube
 
 on:
+  push:
+    branches:
+      - development
+      
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
