--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -8,72 +8,47 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - development  
+      - development
+
   workflow_dispatch:
 
 jobs:
   build:
+
     name: Build
     runs-on: ubuntu-latest
+
     permissions: # permission to comment a PR
       contents: read
       pull-requests: write
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
+
+      # If you wish to fail your job when the Quality Gate is red, uncomment the following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-# #PR Decoration
+      # PR Decoration
       - name: SonarQube Pull Request Comment
         if: always()
         uses: campos-pay/sonarqube-pr-comment@main
         with:
           sonar_token: ${{ secrets.SONAR_TOKEN }}
           sonar_host_url: ${{ secrets.SONAR_HOST_URL }}
-          sonar_projectkey: ${{ secrets.SONAR_PROJECTKEY }}
+          sonar_projectkey: ${{ secrets.SONAR_PROJECT_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           repo_name: ${{ github.repository }}
           pr_number: ${{ github.event.pull_request.number }}
-
-# =========================== SONARQUBE SUGGESTED WORKFLOW - NGINX ISSUE ===================================================
-# on:
-#   push:
-#     branches:
-#       - development
-#       - sonarqube
-
-#   pull_request:
-#     types: [opened, synchronize, reopened]
-
-# jobs:
-#   build:
-#     name: Build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#       - uses: sonarsource/sonarqube-scan-action@master
-#         env:
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
-#       # If you wish to fail your job when the Quality Gate is red, uncomment the
-#       # following lines. This would typically be used to fail a deployment.
-#       # - uses: sonarsource/sonarqube-quality-gate-action@master
-#       #   timeout-minutes: 5
-#       #   env:
-#       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 # =============== NGINX SIZE ISSUE ============================================================
 # on:
