--- a/packages/@sparrow-library/tsconfig.json
+++ b/packages/@sparrow-library/tsconfig.json
@@ -15,6 +15,12 @@
     "isolatedModules": true,
     "paths": {}
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte",
+    "src/icons/DownloadIconWeb.svg"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
