--- a/packages/@sparrow-library/tsconfig.json
+++ b/packages/@sparrow-library/tsconfig.json
@@ -15,12 +15,6 @@
     "isolatedModules": true,
     "paths": {}
   },
-  "include": [
-    "src/**/*.d.ts",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte",
-    "src/icons/DownloadIconWeb.svg"
-  ],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
