--- a/apps/@sparrow-web/package.json
+++ b/apps/@sparrow-web/package.json
@@ -2,7 +2,7 @@
   "name": "@sparrow/web",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite --host 0.0.0.0 --port 1422",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
