--- a/.github/workflows/sparrow-web-dev.yml
+++ b/.github/workflows/sparrow-web-dev.yml
@@ -2,7 +2,7 @@ name: Sparrow-web-dev
 on:
   push:
     branches:
-      - development
+      - pratik/dev
 
 jobs:
    build:
@@ -17,8 +17,26 @@ jobs:
               password: ${{ secrets.REGISTRY_PASSWORD }}
 
          - run: |
-              docker build -f ./apps/@sparrow-web/Dockerfile -t sparrowprod.azurecr.io/sparrow-web-dev:${{ github.run_number }}
+              docker build -f ./apps/@sparrow-web/Dockerfile \
+                --build-arg PORT=${{ vars.PORT }} \
+                --build-arg VITE_WEB_API_URL=${{ vars.VITE_WEB_API_URL }} \
+                --build-arg VITE_WEB_API_TIMEOUT=${{ vars.VITE_WEB_API_TIMEOUT }} \
+                --build-arg VITE_WEB_ENABLE_MIX_PANEL=${{ vars.VITE_WEB_ENABLE_MIX_PANEL }} \
+                --build-arg VITE_WEB_MIX_PANEL_TOKEN=${{ vars.VITE_WEB_MIX_PANEL_TOKEN }} \
+                --build-arg VITE_WEB_SPARROW_SUPPORT_EMAIL=${{ vars.VITE_WEB_SPARROW_SUPPORT_EMAIL }} \
+                --build-arg VITE_WEB_AUTH_URL=${{ vars.VITE_WEB_AUTH_URL }} \
+                --build-arg VITE_WEB_SPARROW_GITHUB=${{ vars.VITE_WEB_SPARROW_GITHUB }} \
+                --build-arg VITE_WEB_SPARROW_DOWNLOAD_LINK=${{ vars.VITE_WEB_SPARROW_DOWNLOAD_LINK }} \
+                --build-arg VITE_WEB_RELEASE_NOTES_API=${{ vars.VITE_WEB_RELEASE_NOTES_API }} \
+                --build-arg VITE_WEB_AZURE_CDN_URL=${{ vars.VITE_WEB_AZURE_CDN_URL }} \
+                --build-arg VITE_WEB_BASE_URL=${{ vars.VITE_WEB_BASE_URL }} \
+                --build-arg VITE_WEB_SPARROW_LINKEDIN=${{ vars.VITE_WEB_SPARROW_LINKEDIN }} \
+                --build-arg VITE_WEB_AZURE_INSIGHTS_CONNECTION_STRING=${{ vars.VITE_WEB_AZURE_INSIGHTS_CONNECTION_STRING }} \
+                --build-arg VITE_WEB_MARKETING_URL=${{ vars.VITE_WEB_MARKETING_URL }} \
+                -t sparrowprod.azurecr.io/sparrow-marketing-webapp:${{ github.run_number }} .
+
               docker push sparrowprod.azurecr.io/sparrow-web-dev:${{ github.run_number }}
+
    deploy:
       needs: build
       runs-on: ubuntu-latest
