fix: env example sample data

--- a/apps/@sparrow-desktop/.env.example
+++ b/apps/@sparrow-desktop/.env.example
@@ -9,6 +9,10 @@ VITE_SPARROW_DOWNLOAD_LINK="https://github.com/sparrowapp-dev/sparrow-app/releas
 VITE_RELEASE_NOTES_PAT_TOKEN=""
 VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/releases"
 VITE_AZURE_CDN_URL=
-VITE_AZURE_INSIGHTS_CONNECTION_STRING=
+VITE_AZURE_INSIGHTS_CONNECTION_STRING="InstrumentationKey=dummy-1234567890;IngestionEndpoint=
+https://centralindia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://centralindia.livediagnostics.monitor.azure.com/;ApplicationId=dummy-1234567890"
 VITE_BASE_URL=
 VITE_SPARROW_LINKEDIN=
+VITE_CANNY_API=""
+VITE_CANNY_URL="https://canny.io/api/v1"
+VITE_MARKETING_URL="http://localhost:1429"
