--- a/apps/@sparrow-web/.env.example
+++ b/apps/@sparrow-web/.env.example
@@ -17,3 +17,4 @@ https://centralindia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://ce
 VITE_WEB_CANNY_API="dummy-1234567890"
 VITE_WEB_CANNY_URL="https://canny.io/api/v1"
 VITE_WEB_MARKETING_URL="http://localhost:1429"
+VITE_WEB_SPARROW_DOCS="https://docs.sparrowapp.dev/docs/intro"
