--- a/apps/@sparrow-web/deploymentManifests/deployment.yml
+++ b/apps/@sparrow-web/deploymentManifests/deployment.yml
@@ -7,6 +7,11 @@ metadata:
   name: sparrow-web
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0  
   selector:
     matchLabels:
       app: sparrow-web
