--- a/apps/@sparrow-web/Dockerfile
+++ b/apps/@sparrow-web/Dockerfile
@@ -18,6 +18,7 @@ ARG VITE_WEB_BASE_URL
 ARG VITE_WEB_SPARROW_LINKEDIN
 ARG VITE_WEB_AZURE_INSIGHTS_CONNECTION_STRING
 ARG VITE_WEB_MARKETING_URL
+ARG VITE_WEB_SPARROW_DOCS
 
 ENV PORT=$PORT
 ENV VITE_WEB_API_URL=$VITE_WEB_API_URL
@@ -34,6 +35,7 @@ ENV VITE_WEB_BASE_URL=$VITE_WEB_BASE_URL
 ENV VITE_WEB_SPARROW_LINKEDIN=$VITE_WEB_SPARROW_LINKEDIN
 ENV VITE_WEB_AZURE_INSIGHTS_CONNECTION_STRING=$VITE_WEB_AZURE_INSIGHTS_CONNECTION_STRING
 ENV VITE_WEB_MARKETING_URL=$VITE_WEB_MARKETING_URL
+ENV VITE_WEB_SPARROW_DOCS=$VITE_WEB_SPARROW_DOCS
 
 
 EXPOSE 1422
