--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "author": "Sparrow",
   "description": "The Sparrow App is your next go to API development buddy which can help you test, debug, distribute better APIs while collaborating with your colleagues and making you a better programmer.",
-  "version": "2.9.0",
+  "version": "2.10.0",
   "type": "module",
   "workspaces": [
     "./apps/@sparrow-web",
@@ -105,5 +105,54 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
-  "repository": "https://github.com/sparrowapp-dev/sparrow-app.git"
+  "repository": "https://github.com/sparrowapp-dev/sparrow-app.git",
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/exec",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]"
+        }
+      ],
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "/Users/runner/work/sparrow-app/sparrow-app/apps/@sparrow-desktop/src-tauri/target/debug/bundle/dmg/*.dmg",
+              "label": "Sparrow_2.10.0.dmg"
+            },
+            {
+              "path": "msi_files/*.exe",
+              "label": "Sparrow_2.10.0.exe"
+            },
+            {
+              "path": "msi_files/*.msi",
+              "label": "Sparrow_2.10.0.msi"
+            },
+            {
+              "path": "msi_files/*.zip",
+              "label": "Sparrow_2.10.0_x64_en-US.msi.zip"
+            },
+            {
+              "path": "/Users/runner/work/sparrow-app/sparrow-app/apps/@sparrow-desktop/src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz",
+              "label": "Sparrow.app.tar.gz"
+            }
+          ]
+        }
+      ]
+    ]
+  }
 }
