--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,12 @@
   "[svelte]": {
     "editor.defaultFormatter": "svelte.svelte-vscode"
   },
-  "git.mergeEditor": false
+  "git.mergeEditor": false,
+  "rust-analyzer.cargo.loadOutDirsFromCheck": true, // Add this line'
+  "rust-analyzer.procMacro.attributes.enable": true,
+  "rust-analyzer.procMacro.enable": true,
+  "rust-analyzer.linkedProjects": [
+    "apps\\@sparrow-desktop\\src-tauri\\Cargo.toml" // Update this path as needed
+  ],
+  "rust-analyzer.server.path": null
 }
