--- a/apps/@sparrow-desktop/src-tauri/Cargo.toml
+++ b/apps/@sparrow-desktop/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ native-tls = "0.2"
 tungstenite = "0.20.1"
 url = "2.2"
 futures = "0.3"
+rust_socketio = "0.6.0"
 tauri-plugin-os = "2.0.0-beta.0"
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
@@ -52,3 +53,5 @@ objc = "0.2"
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+
