--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tauri-apps/api": "^2.0.0-beta.0",
     "@tauri-apps/cli": "^2.0.0-beta.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-dialog": "^2.0.1",
     "@tauri-apps/plugin-os": "^2.0.0-beta.0",
     "@tauri-apps/plugin-process": "^2.0.0-beta.0",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.1",
